# Program-LSS

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  mission control_ILOS.py  mission control_PLOS.py  ship_data_logger.py  test_ship_data_logger.py
data/Data USV July 5th/lintasan_2/: 2025-07-05-17-44-13-asv-odom.csv  2025-07-05-17-44-13-diagnostics.csv  2025-07-05-17-44-13-map-corners.csv  2025-07-05-17-44-13-mavros-battery.csv  2025-07-05-17-44-13-mavros-geofence-waypoints.csv  2025-07-05-17-44-13-mavros-global_position-compass_hdg.csv  2025-07-05-17-44-13-mavros-global_position-global.csv  2025-07-05-17-44-13-mavros-global_position-gp_origin.csv  2025-07-05-17-44-13-mavros-global_position-local.csv  2025-07-05-17-44-13-mavros-global_position-raw-fix.csv  2025-07-05-17-44-13-mavros-global_position-raw-gps_vel.csv  2025-07-05-17-44-13-mavros-global_position-raw-satellites.csv  2025-07-05-17-44-13-mavros-global_position-rel_alt.csv  2025-07-05-17-44-13-mavros-gpsstatus-gps1-raw.csv  2025-07-05-17-44-13-mavros-home_position-home.csv  2025-07-05-17-44-13-mavros-imu-data.csv  2025-07-05-17-44-13-mavros-imu-data_raw.csv  2025-07-05-17-44-13-mavros-imu-mag.csv  (+25 more)
kalkulasi matriks usv/Kalkulasi Matriks USV/: Centroid_LSS01.mlx  Damping.mlx  Hydrostatic.mlx  MRB_CRB.mlx  M_C.mlx  MoI_and_PoICentroid.mlx  Model 6 DOF USV.docx  Model_6_DOF.mlx
src/lss_autonomy/: CMakeLists.txt  package.xml  setup.py
src/lss_controller/: CMakeLists.txt  package.xml  setup.py
src/lss_localization/: CMakeLists.txt  package.xml  setup.py
src/lss_srvs/: CMakeLists.txt  package.xml
(+112 files in other folders)
